<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorbackground"
        app:layout_scrollFlags="scroll|enterAlways"
        app:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@color/colorWhite">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp"
            android:paddingTop="50dp">

            <ImageView
                android:id="@+id/img_login_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/clean_icon" />

            <TextView
                android:id="@+id/txt_login_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_login_logo"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/clanot_medium"
                android:text="@string/app_full_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_20sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_login_app_name"
                android:layout_marginLeft="@dimen/margin_left_Editext"
                android:layout_marginRight="@dimen/margin_right_Editext"
                android:layout_marginTop="@dimen/textsize_20dp"
                android:textColorHint="@color/textColorHint"
                android:theme="@style/CustomEdittextWhile"
                app:hintTextAppearance="@style/CustomEdittextWhile">

                <EditText
                    android:id="@+id/edt_login_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/txt_username"
                    android:inputType="text"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_login_mobile"
                android:layout_marginLeft="@dimen/margin_left_Editext"
                android:layout_marginRight="@dimen/margin_right_Editext"
                android:textColorHint="@color/textColorHint"
                android:theme="@style/CustomEdittextWhile"
                app:hintTextAppearance="@style/CustomEdittextWhile">

                <EditText
                    android:id="@+id/edt_login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_16sp" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:fontFamily="@font/clanot_medium"
        android:text="@string/login_text"
        android:textSize="@dimen/textsize_14sp" />
</RelativeLayout>